--- a/playAgainstCpu.html
+++ b/playAgainstCpu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NepChess</title>
+    <title>NepChess?</title>
 
     <link rel="stylesheet" href="css/chessboard-1.0.0.min.css">
     <script src="js/jquery-1.12.4.min.js"></script>
